# you-predict

./: .dvcignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  env  package.json  requirements.txt  test.py
you-predict-core/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  main.py  pyproject.toml  pyrightconfig.json  testing.http  you_predict.ipynb
you-predict-core/src/config/: clients.py  constants.py  settings.py
you-predict-core/src/data_sources/: bigquery.py  bigquery_schemas.py  gcs.py  gcs_paths.py
you-predict-core/src/engines/: discovery.py
you-predict-core/src/models/: dimensions.py  facts.py  features.py  ml.py  monitoring.py  operational.py  raw.py
you-predict-core/src/scripts/: bootstrap_all.py  bootstrap_bigquery.py  bootstrap_cloud_tasks.py  bootstrap_gcs.py  export_dashboard_data.py  seed_categories.py  seed_dates.py  seed_tracked_channels.py  subscribe_channels.py
you-predict-core/src/services/: analytics.py  fanout.py  pipelines.py  snapshot_handler.py  webhook.py
you-predict-core/src/utils/: ids.py  retry.py  text.py  timestamps.py
you-predict-core/tests/: conftest.py
you-predict-core/tests/fixtures/: channel_mrbeast.json  comment_threads.json  video_celebrities.json  video_sky.json  video_stats_only.json
you-predict-core/tests/test_config/: test_constants.py
you-predict-core/tests/test_data_sources/: test_bigquery_schemas.py  test_gcs_paths.py
you-predict-core/tests/test_engines/: test_discovery.py  test_features_logic.py  test_features_runner.py  test_features_sql.py  (+5 more)
(+94 files in other folders)
